# CS553-Projects

cs553-spring2024-hw2-dsasidharannair/: README.md  benchmark.sh  cpu_eval.csv  cpu_eval_v.txt  disk_eval.csv  memory_eval.csv  memory_eval_v.txt  network_eval.csv  network_eval_v.txt  python_cpu.py  python_disk.py  python_memory.py  python_network.py  read_cpu_eval.sh  read_disk_eval.sh  read_memory_eval.sh  read_network_eval.sh
cs553-spring2024-hw2-dsasidharannair/CPU logs/: cpu_eval_b.txt  cpu_eval_b_1.txt  cpu_eval_b_16.txt  cpu_eval_b_2.txt  cpu_eval_b_32.txt  cpu_eval_b_4.txt  cpu_eval_b_64.txt  cpu_eval_b_8.txt  cpu_eval_c.txt  cpu_eval_c_1.txt  cpu_eval_c_16.txt  (+12 more)
cs553-spring2024-hw3-dsasidharannair/: README.md
cs553-spring2024-hw4-corrected-dsasidharannair/: CMakeLists.txt  README.md  external_sort.c  generate_graph.py  hashgen  hashgen.c  new.c  results_b.csv  results_s.csv  run_bench_b.sh  run_bench_s.sh
cs553-spring2024-hw4-corrected-dsasidharannair/results/1GB/: result_mod_s.csv
cs553-spring2024-hw4-corrected-dsasidharannair/results/64GB/: result_mod_b.csv
cs553-spring2024-hw5-dsasidharannair/: HadoopSort_16_results.txt  HadoopSort_16_results_config2.txt  HadoopSort_32_results.txt  HadoopSort_32_results_config2.txt  HadoopSort_64_results.txt  README.md  SparkSort.py  create_files  create_files.c  evaluate_sysstat.py  hashgen  hashgen.c  results_1.csv  results_hadoop.csv  results_hadoop_cluster2.csv  run_hadoop_cluster1.sh  run_hadoop_cluster2.sh  run_non_hadoop.sh
cs553-spring2024-wa1-dsasidharannair/: README.md  ~$ 553 Assignment 1 Report.docx
(+109 files in other folders)
